config fix
