# docs/swagger.json
@@ -4,7 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/v1/recvisual/review/project/delete": {
+        "/mine/review/project/delete": {
             "post": {
                 "produces": [
                     "application/json"
@@ -53,7 +53,7 @@
                 }
             }
         },
-        "/v1/recvisual/review/project/detail": {
+        "/mine/review/project/detail": {
             "get": {
                 "produces": [
                     "application/json"
@@ -101,7 +101,7 @@
                 }
             }
         },
-        "/v1/recvisual/review/project/list": {
+        "/mine/review/project/list": {
             "get": {
                 "produces": [
                     "application/json"
@@ -178,7 +178,7 @@
                 }
             }
         },
-        "/v1/recvisual/review/project/save": {
+        "/mine/review/project/save": {
             "post": {
                 "produces": [
                     "application/json"
@@ -227,7 +227,7 @@
                 }
             }
         },
-        "/v1/recvisual/review/project/upStatus": {
+        "/mine/review/project/upStatus": {
             "post": {
                 "produces": [
                     "application/json"
